<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hy.lyx.fb.gw.wyx.lks.flyingchess.LoginAct"
    android:background="@drawable/sky_color"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.9">

            <Button
                android:layout_width="36sp"
                android:layout_height="36sp"
                android:id="@+id/home"
                android:background="@drawable/button_back"
                android:layout_marginLeft="15sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5sp" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/login_face"
                android:adjustViewBounds="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.6" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/login_middle"
                android:layout_centerHorizontal="true"
                android:id="@+id/linearLayout"
                android:layout_weight="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#ff444444"
                    android:id="@+id/myName"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:id="@+id/_myName"
                        android:singleLine="true"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#ff444444"
                    android:id="@+id/pw"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:layout_centerHorizontal="true"
                        android:layout_above="@+id/space2"
                        android:hint="@string/password"
                        android:id="@+id/_pw"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#ff444444"
                    android:id="@+id/pw2"
                    android:layout_weight="1">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/_pw2"
                        android:hint="@string/password_confirm"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:id="@+id/loginButton"
                        android:background="@drawable/login_login_button"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:layout_marginRight="1dp"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:id="@+id/register"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/login_signin_button"
                        android:layout_weight="1"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.6" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageView"
            android:layout_weight="2"
            android:scaleType="fitXY" />
    </LinearLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/content_wait_view" />

</RelativeLayout>
